cp4i-demo/resources/00-common-service-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ibm-common-services 
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
