cp4i-demo/resources/01a-tracing-platform-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-distributed-tracing 
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
