cp4i-demo/resources/35a-pgsql-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
