cp4i-demo/resources/99-inspector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-inspector
  namespace: default
spec:
  containers:
  - name: pvc-inspector
    image: busybox
    command: ["sh", "-c", "sleep infinity"]
    volumeMounts:
    - mountPath: /pvc
      name: pvc-volume
  volumes:
  - name: pvc-volume
    persistentVolumeClaim:
      claimName: pvc-c2ce7b11d6
