cp4i-demo/resources/04d-nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  namespace: cp4i
spec:
  to:
    kind: Service
    name: example
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
